# ai-practices

./: .gitignore  pyproject.toml
rag/: doc.txt  main.ipynb  pyproject.toml  sanguo.txt
tool-use/: function-call.ipynb  hello-mcp-server.py
